# pob-poe2-frontend

./: .gitignore  .gitmodules  Cargo.toml  README.md  justfile  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  upstream-sync.yml
docs/: v0.1-acceptance.md
docs/stat-keys/: stat-keys-sorceress-stormweaver-2026-04-22T09-42-01.txt  stat-keys-warrior-titan-2026-04-22T09-38-59.txt  stat-keys-witch-infernalist-2026-04-22T09-47-19.txt
public/: item-bases.json  item-icons-manifest.json  unique-icons-manifest.json
public/tree-backgrounds/: manifest.json
scripts/: build-tree-atlas.mjs  bundle-luajit.ps1  extract-item-bases.mjs  extract-item-icons.mjs  extract-tree-backgrounds.mjs  extract-tree-icons.mjs
sidecar/: main.lua
src-frontend/: App.tsx  index.html  main.tsx  styles.css
src-frontend/config/: ConfigPanel.tsx  ConfigRow.tsx  configStore.test.ts  configStore.ts  types.ts  xmlConfig.test.ts  xmlConfig.ts
src-frontend/data/: .gitkeep  config-schema.json  socketables.json
src-frontend/items/: ItemTooltip.tsx  ItemsPanel.tsx  itemsStore.ts  xmlImport.ts
src-frontend/tree/: ConnectionRenderer.ts  NodeFrame.ts  NodeSprite.ts  TreeCanvas.tsx  TreeInteraction.ts  TreeRenderer.ts  atlas.ts  focusStore.ts  geometry.test.ts  geometry.ts
src-frontend/types/: tree.ts
src-frontend/ui/: BuildLoader.tsx  Button.tsx  (+12 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  lua_sidecar.rs  main.rs
src-tauri/src/commands/: fs.rs  lua.rs  mod.rs
test/: setup.ts
(+29 files in other folders)
